<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/primario"
    tools:context=".MenuApp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="50sp"
        android:textColor="@color/texto"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        />

    <Button
        android:id="@+id/btnColores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secundario"
        android:text="@string/colores"
        android:textSize="23sp"
        android:textColor="@color/texto"
        android:layout_marginTop="75dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btnAnimales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secundario"
        android:text="@string/animales"
        android:textSize="23sp"
        android:textColor="@color/texto"
        android:layout_marginTop="75dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btnFrutas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secundario"
        android:textSize="23sp"
        android:text="@string/frutas"
        android:textColor="@color/texto"
        android:layout_marginTop="75dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btnMenuSeleccionCatAMenuApp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:backgroundTint="@color/acento"
        android:text="@string/atras"
        android:textColor="@color/texto" />

</LinearLayout>