<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primario"
    tools:context=".ColoresLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/colores"
        android:layout_marginTop="75dp"
        android:layout_gravity="center"
        android:textColor="@color/texto"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        >

        <ImageView
            android:id="@+id/imgAmarillo"
            android:layout_width="165dp"
            android:layout_height="112dp"
            android:src="@drawable/amarillo" />
        <Button
            android:id="@+id/btnAmarillo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            android:backgroundTint="@color/acento"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:textColor="@color/texto"
            android:textSize="20sp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        >

        <ImageView
            android:id="@+id/imgAzul"
            android:layout_width="156dp"
            android:layout_height="112dp"
            android:src="@drawable/blue" />
        <Button
            android:id="@+id/btnAzul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:backgroundTint="@color/azul"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:textColor="@color/texto"
            android:textSize="20sp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        >

        <ImageView
            android:id="@+id/imgRojo"
            android:layout_width="156dp"
            android:layout_height="100dp"
            android:src="@drawable/red" />
        <Button
            android:id="@+id/btnRojo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:backgroundTint="@color/red"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:textSize="20sp"
            android:textColor="@color/texto"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atras"
        android:backgroundTint="@color/acento"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:textColor="@color/texto"
        android:textSize="23sp"

        />

</LinearLayout>